[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turbolynx"
dynamic = ["version"]
description = "TurboLynx — High-performance graph database Python API"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]

[project.optional-dependencies]
pandas = ["pandas>=1.0"]
numpy = ["numpy>=1.20"]

[tool.setuptools]
packages = ["turbolynx"]
include-package-data = true
license-files = [
    "LICENSE",
    "THIRD-PARTY-NOTICES.md",
    "licenses/*.txt",
    "licenses/*.md",
    "licenses/**/LICENSE*",
    "licenses/**/NOTICE*",
    "licenses/**/COPYRIGHT*",
]

[tool.setuptools.dynamic]
version = {attr = "turbolynx._version.__version__"}
